test/typeEval2.slq
// args: --run

def foo[τ](){
	return []:τ[];
}

def main(){
	return foo[assert(0):*](); // error
}
